Fixing bug 473580. Disable drawWindow for sun java to avoid pegging the CPU. r=vladimir@pobox.com, sr=jst@mozilla.org